--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/repo
     docker:
-      — image: circleci/node:12-stretch-browsers-legacy
+      — image: circleci/node
     steps:
       - checkout
       - run:
