--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,25 @@
-version: 2.1
+version: 2.17
 
 # Define the jobs we want to run for this project
 jobs:
-  build:
-    docker:
-      - image: circleci/node
-    steps:
-      - checkout
-      - run: echo "this is the build job"
-  test:
-    docker:
-      - image: circleci/<language>:<version TAG>
-    steps:
-      - checkout
-      - run: echo "this is the test job"
+    build:
+        docker:
+            - image: circleci/node
+        steps:
+            - checkout
+            - run: echo "this is the build job"
+                name: install-npm
+                command: npm install
+    test:
+        docker:
+            - image: circleci/<language>:<version TAG>
+        steps:
+            - checkout
+            - run: echo "this is the test job"
 
 # Orchestrate our job run sequence
 workflows:
-  build_and_test:
-    jobs:
-      - build
-      - test
+    build_and_test:
+        jobs:
+        - build
+        - test
