--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
             - image: circleci/node
         steps:
             - checkout
-            - run: echo "this is the build job"
+            - run:
                 name: install-npm
                 command: npm install
     test:
