--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,7 @@ jobs:
             - image: circleci/node
         steps:
             - checkout
-            - run:
-                name: install-npm
-                command: npm install
+            - run: npm install
     test:
         docker:
             - image: circleci/<language>:<version TAG>
